--- a/src/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
+++ b/src/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
@@ -56,7 +56,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <contentful-rich-text></contentful-rich-text>
+        <contentful-rich-text><h2>Test 1</h2><p class="govuk-body">Test 1</p><h2>Test 2</h2><p class="govuk-body">Test 2</p><p class="govuk-body"></p><p class="govuk-body"></p></contentful-rich-text>
     </div>
 </div>
     </main>
