--- a/src/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
+++ b/src/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
@@ -7,6 +7,7 @@
 		<link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.svg">
 		<link href="/govuk/all.min.css?v=1zk5-99q-gHitumTgjIgN7iX7dHY_sxfmG9CzkpR58o" rel="stylesheet">
 		<link rel="stylesheet" href="/css/dfefrontend.css?v=WGvq-LWGl1pJq4gg3aT3WY8ZfNc8VC9IO17Do-VNQhE">
+		<link rel="stylesheet" href="/css/application.css?v=1G8m9pRcWHNxuj3Wwajj297rbK89xfGA5ro7pz1uA1Y">
 	</head>
 	<body class="govuk-template__body">
 		<script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
@@ -43,14 +44,12 @@
 			<main b-k59dbireqp="" class="govuk-main-wrapper" id="main-content" role="main">
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-two-thirds">
-						<contentful-rich-text>
-							<h2>Test 1</h2>
-							<p class="govuk-body">Test 1</p>
-							<h2>Test 2</h2>
-							<p class="govuk-body">Test 2</p>
-							<p class="govuk-body"></p>
-							<p class="govuk-body"></p>
-						</contentful-rich-text>
+						<h2>Test 1</h2>
+						<p class="govuk-body">Test 1</p>
+						<h2>Test 2</h2>
+						<p class="govuk-body">Test 2</p>
+						<p class="govuk-body"></p>
+						<p class="govuk-body"></p>
 					</div>
 				</div>
 			</main>
