--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
@@ -44,9 +44,9 @@
 			<main b-k59dbireqp="" class="govuk-main-wrapper" id="main-content" role="main">
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-two-thirds">
-						<h2>Test 1</h2>
+						<h2 class="govuk-heading-l" id="Test-1">Test 1</h2>
 						<p class="govuk-body">Test 1</p>
-						<h2>Test 2</h2>
+						<h2 class="govuk-heading-l" id="Test-2">Test 2</h2>
 						<p class="govuk-body">Test 2</p>
 						<p class="govuk-body"></p>
 						<p class="govuk-body"></p>
