--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
@@ -12,6 +12,19 @@
 	<body class="govuk-template__body">
 		<script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
 		<a b-k59dbireqp="" href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
+		<div class="govuk-width-container">
+			<div class="govuk-phase-banner">
+				<p class="govuk-phase-banner__content">
+					<strong class="govuk-phase-banner__content__tag govuk-tag">Beta</strong>
+					<span class="govuk-phase-banner__text">
+						<span class="govuk-phase-banner__text">
+							This is a new service. Help us improve it and
+							<a class="govuk-link" href="#">give your feedback by email</a>.
+						</span>
+					</span>
+				</p>
+			</div>
+		</div>
 		<header class="dfe-header" role="banner">
 			<div class="dfe-width-container dfe-header__container">
 				<div class="dfe-header__logo">
