Add CSP headers to respond to Zap scan

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="/css/application.css?v=1G8m9pRcWHNxuj3Wwajj297rbK89xfGA5ro7pz1uA1Y">
 	</head>
 	<body class="govuk-template__body">
-		<script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
+		<script nonce="mock-nonce">document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
 		<a b-k59dbireqp="" href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 		<div class="govuk-width-container">
 			<div class="govuk-phase-banner">
@@ -91,7 +91,7 @@
 			</div>
 		</footer>
 		<script src="/govuk/all.min.js?v=RHpXsNmLgFsVb0_A7CLeltntRsu0LVT9kE8cBjem4vY" type="module"></script>
-		<script type="module">
+		<script nonce="mock-nonce" type="module">
 import { initAll } from '/govuk/all.min.js'
 initAll()
 
