Configuration driven from contentful

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Home - Find support for leaving care</title>
+		<title>Home - Care leavers</title>
 		<link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.svg">
 		<link href="/govuk/all.min.css?v=1zk5-99q-gHitumTgjIgN7iX7dHY_sxfmG9CzkpR58o" rel="stylesheet">
 		<link rel="stylesheet" href="/css/dfefrontend.css?v=WGvq-LWGl1pJq4gg3aT3WY8ZfNc8VC9IO17Do-VNQhE">
@@ -39,8 +39,23 @@
 				</div>
 			</div>
 			<div class="dfe-width-container dfe-header__service-name">
-				<a href="/" class="dfe-header__link--service">Find support for leaving care</a>
+				<a href="/" class="dfe-header__link--service">Care leavers</a>
 			</div>
+			<nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
+				<div class="dfe-width-container">
+					<p class="dfe-header__navigation-title">
+						<span id="label-navigation">Menu</span>
+						<button class="dfe-header__navigation-close" id="close-menu">
+							<svg class="dfe-icon dfe-icon__close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false" width="27" height="27">
+								<path d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"></path>
+							</svg>
+							<span class="govuk-visually-hidden">Close menu</span>
+						</button>
+					</p>
+					<ul class="dfe-header__navigation-list">
+					</ul>
+				</div>
+			</nav>
 		</header>
 		<section b-k59dbireqp="" class="dfe-page-grey">
 			<div b-k59dbireqp="" class="govuk-width-container">
