--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -8,6 +8,8 @@
 		<link href="/govuk/all.min.css?v=1zk5-99q-gHitumTgjIgN7iX7dHY_sxfmG9CzkpR58o" rel="stylesheet">
 		<link rel="stylesheet" href="/css/dfefrontend.css?v=WGvq-LWGl1pJq4gg3aT3WY8ZfNc8VC9IO17Do-VNQhE">
 		<link rel="stylesheet" href="/css/application.css?v=H7PuBU8rbQF-U4XQPKBwjpOD94gvJUe0-rOTc-Uim-M">
+		<link rel="stylesheet" href="/css/metadata.css?v=R7DoI6WesxgOJXfjGZG8KqwKp-T-YbRuxy5344pR9r8">
+		<link rel="stylesheet" href="/css/cta.css?v=xclHjduLeoknWVTbhPL4tVIADjz_wSmD4_i8rB9OLak">
 	</head>
 	<body class="govuk-template__body">
 		<script nonce="mock-nonce">document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
