--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html class="govuk-template" lang="en">
 	<head>
+		
+		<!-- Begin ShareThis -->
+		<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=67a9d0adc7696f001258a34a&amp;product=inline-share-buttons&amp;source=platform" async="async" nonce="mock-nonce"></script>
+		
+		<!-- End ShareThis -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Get support if you've been in care - Care leavers</title>
