--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html class="govuk-template" lang="en">
 	<head>
+		
+		<!-- Begin ShareThis -->
+		<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=67a9d0adc7696f001258a34a&amp;product=inline-share-buttons&amp;source=platform" async="async" nonce="mock-nonce"></script>
+		
+		<!-- End ShareThis -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Image Test - Care leavers</title>
@@ -76,6 +81,8 @@
 					<div class="govuk-grid-column-two-thirds">
 						<img class="full-width-image" src="//images.ctfassets.net/3y72rykjd1o5/71UfwHVCjz9O7RxA0e3jrJ/10a9c71dd9d5aa3ef795b1a571aa33d4/Test.png" alt="Test alt description">
 						<p class="govuk-body"></p>
+					</div>
+					<div class="govuk-grid-column-one-third">
 					</div>
 				</div>
 			</main>
