--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html class="govuk-template" lang="en">
 	<head>
+		
+		<!-- Begin ShareThis -->
+		<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=67a9d0adc7696f001258a34a&amp;product=inline-share-buttons&amp;source=platform" async="async" nonce="mock-nonce"></script>
+		
+		<!-- End ShareThis -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Home - Care leavers</title>
@@ -80,6 +85,8 @@
 						<p class="govuk-body">Test 2</p>
 						<p class="govuk-body"></p>
 						<p class="govuk-body"></p>
+					</div>
+					<div class="govuk-grid-column-one-third">
 					</div>
 				</div>
 			</main>
