Add Show Footer which gets footer from configuration

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -161,6 +161,15 @@
 				</div>
 			</main>
 		</div>
+		<section b-k59dbireqp="" class="dfe-page-grey">
+			<div b-k59dbireqp="" class="govuk-width-container">
+				<div class="govuk-grid-row">
+					<div class="govuk-grid-column-two-thirds">
+						<p class="govuk-body">Care leavers</p>
+					</div>
+				</div>
+			</div>
+		</section>
 		<footer class="govuk-footer " role="contentinfo">
 			<div class="govuk-width-container ">
 				<div class="govuk-footer__meta">
