Remove version from CSS in integration tests

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
@@ -33,10 +33,10 @@
 		<title>Home - Care leavers</title>
 		<link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.svg">
 		<link href="/govuk/all.min.css?v=1zk5-99q-gHitumTgjIgN7iX7dHY_sxfmG9CzkpR58o" rel="stylesheet">
-		<link rel="stylesheet" href="/css/dfefrontend.css?v=WGvq-LWGl1pJq4gg3aT3WY8ZfNc8VC9IO17Do-VNQhE">
-		<link rel="stylesheet" href="/css/application.css?v=GwjC9vuwjwaRW8isjS028wuhztVrlgWQ-spZxTlUf3c">
-		<link rel="stylesheet" href="/css/metadata.css?v=R7DoI6WesxgOJXfjGZG8KqwKp-T-YbRuxy5344pR9r8">
-		<link rel="stylesheet" href="/css/cta.css?v=xclHjduLeoknWVTbhPL4tVIADjz_wSmD4_i8rB9OLak">
+		<link rel="stylesheet" href="/css/dfefrontend.css">
+		<link rel="stylesheet" href="/css/application.css">
+		<link rel="stylesheet" href="/css/metadata.css">
+		<link rel="stylesheet" href="/css/cta.css">
 	</head>
 	<body class="govuk-template__body">
 		
