--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
@@ -2,8 +2,30 @@
 <html class="govuk-template" lang="en">
 	<head>
 		
+		<!-- Google Tag Manager -->
+		<script nonce="mock-nonce">
+            (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
+                var f=d.getElementsByTagName(s)[0],
+                j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;
+                j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+                j.setAttribute('nonce','mock-nonce');
+                f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-TEST');</script>
+		
+		<!-- End Google Tag Manager -->         
+		<!-- Clarity -->
+		<script type="text/javascript" nonce="mock-nonce">
+            (function(c,l,a,r,i,t,y){
+                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)}; 
+                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+            })(window, document, "clarity", "script", "test-clarity");
+        
+		</script>
+		
+		<!-- End Clarity -->     
 		<!-- Begin ShareThis -->
-		<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=67a9d0adc7696f001258a34a&amp;product=inline-share-buttons&amp;source=platform" async="async" nonce="mock-nonce"></script>
+		<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=abcdefghijk&amp;product=inline-share-buttons&amp;source=platform" async="async" nonce="mock-nonce"></script>
 		
 		<!-- End ShareThis -->
 		<meta charset="utf-8">
@@ -11,12 +33,19 @@
 		<title>Home - Care leavers</title>
 		<link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.svg">
 		<link href="/govuk/all.min.css?v=1zk5-99q-gHitumTgjIgN7iX7dHY_sxfmG9CzkpR58o" rel="stylesheet">
-		<link rel="stylesheet" href="/css/dfefrontend.css?v=WGvq-LWGl1pJq4gg3aT3WY8ZfNc8VC9IO17Do-VNQhE">
-		<link rel="stylesheet" href="/css/application.css?v=aId97rmVOl_WXYSF5L7XAITn2xJsPX6vxGkscViBm34">
-		<link rel="stylesheet" href="/css/metadata.css?v=R7DoI6WesxgOJXfjGZG8KqwKp-T-YbRuxy5344pR9r8">
-		<link rel="stylesheet" href="/css/cta.css?v=xclHjduLeoknWVTbhPL4tVIADjz_wSmD4_i8rB9OLak">
+		<link rel="stylesheet" href="/css/dfefrontend.css">
+		<link rel="stylesheet" href="/css/application.css">
+		<link rel="stylesheet" href="/css/metadata.css">
+		<link rel="stylesheet" href="/css/cta.css">
 	</head>
 	<body class="govuk-template__body">
+		
+		<!-- Google Tag Manager (noscript) -->
+		<noscript b-k59dbireqp="">
+			<iframe b-k59dbireqp="" title="GTM" src="https://www.googletagmanager.com/ns.html?id=GTM-TEST" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+		</noscript>
+		
+		<!-- End Google Tag Manager (noscript) -->
 		<script nonce="mock-nonce">document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
 		<a b-k59dbireqp="" href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 		<div class="govuk-width-container">
