Add environment banner (similar to DFE Signin) warning about non prod environments

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -28,15 +28,15 @@
 		<link rel="stylesheet" href="/css/cta.css">
 	</head>
 	<body class="govuk-template__body">
-		
-		<!-- Google Tag Manager (noscript) -->
-		<noscript b-k59dbireqp="">
-			<iframe b-k59dbireqp="" title="GTM" src="https://www.googletagmanager.com/ns.html?id=GTM-TEST" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-		</noscript>
-		
-		<!-- End Google Tag Manager (noscript) -->
 		<script nonce="mock-nonce">document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
 		<a b-k59dbireqp="" href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
+		<div class="environment-banner">
+			<div class="govuk-body-s">
+				<strong>ATTENTION!</strong>
+				This is the
+				<strong>IntegrationTest</strong>
+				version of Care leavers web site.</div>
+		</div>
 		<div class="govuk-width-container">
 			<div class="govuk-phase-banner">
 				<p class="govuk-phase-banner__content">
