--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/ComponentTest.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/ComponentTest.html
@@ -120,20 +120,22 @@
 								</div>
 							</div>
 						</section>
-						<section class="dfe-section banner">
-							<div class="govuk-grid-row split-panel">
-								<div class="govuk-grid-column-one-half image-column">
-									<a href="">
-										<div class="image-container" style="background-image: url('//images.ctfassets.net/3y72rykjd1o5/6c33i9PP15g9PbRZJ6A57W/76348abdf0d7eba126c8fa656e79a34f/care-leavers-05_720.jpg');"></div>
-									</a>
-								</div>
-								<div class="govuk-grid-column-one-half text-column">
-									<h3 class="govuk-heading-m">
-										<a href="">Card test</a>
-									</h3>
-									<p class="govuk-body">Using a bigger image</p>
-									<p class="govuk-!-margin-bottom-0">
-									</p>
+						<section class="govuk-!-margin-top-5 govuk-!-margin-bottom-5">
+							<div class="banner-content">
+								<div class="govuk-grid-row split-panel">
+									<div class="govuk-grid-column-one-half image-column">
+										<a href="">
+											<div class="image-container" style="background-image: url('//images.ctfassets.net/3y72rykjd1o5/6c33i9PP15g9PbRZJ6A57W/76348abdf0d7eba126c8fa656e79a34f/care-leavers-05_720.jpg');"></div>
+										</a>
+									</div>
+									<div class="govuk-grid-column-one-half text-column">
+										<h3 class="govuk-heading-m">
+											<a href="">Card test</a>
+										</h3>
+										<p class="govuk-body">Using a bigger image</p>
+										<p class="govuk-!-margin-bottom-0">
+										</p>
+									</div>
 								</div>
 							</div>
 						</section>
