Re-gen snapshots

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -170,6 +170,10 @@
 											<dd class="gem-c-metadata__definition">
 												07 February 2025
 											</dd>
+											<dt class="gem-c-metadata__term">Paged Fetched</dt>
+											<dd class="gem-c-metadata__definition">
+												07 February 2025 17:40:43
+											</dd>
 										</dl>
 									</div>
 								</div>
