--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/ComponentTest.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/ComponentTest.html
@@ -187,6 +187,10 @@
 											<dd class="gem-c-metadata__definition">
 												12 February 2025
 											</dd>
+											<dt class="gem-c-metadata__term">Paged Fetched</dt>
+											<dd class="gem-c-metadata__definition">
+												12 February 2025 15:51:59
+											</dd>
 										</dl>
 									</div>
 								</div>
