--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -25,6 +25,7 @@
 		<link rel="stylesheet" href="/css/dfefrontend.css">
 		<link rel="stylesheet" href="/css/application.css">
 		<link rel="stylesheet" href="/css/metadata.css">
+		<link rel="stylesheet" href="/css/navigation.css">
 		<link rel="stylesheet" href="/css/cta.css">
 	</head>
 	<body class="govuk-template__body">
@@ -52,6 +53,11 @@
 		</div>
 		<header class="dfe-header" role="banner">
 			<div class="dfe-width-container dfe-header__container">
+				<div class="dfe-header__menu">
+					<button type="button" class="dfe-header__menu-toggle" id="menu-toggle" aria-controls="header-navigation" aria-expanded="false">
+						Menu
+					</button>
+				</div>
 				<div class="dfe-header__logo">
 					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="DfE homepage">
 						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="DfE Homepage">
@@ -81,6 +87,24 @@
 					</ul>
 				</div>
 			</nav>
+			<script nonce="mock-nonce">
+    document.addEventListener('DOMContentLoaded', function () {
+        const menuToggle = document.getElementById('menu-toggle');
+        const menuClose = document.getElementById('close-menu');
+        const navigation = document.getElementById('header-navigation');
+
+        menuToggle.addEventListener('click', function () {
+            const isOpen = navigation.classList.toggle('js-show');
+            menuToggle.setAttribute('aria-expanded', isOpen.toString());
+        });
+
+        menuClose.addEventListener('click', function () {
+            navigation.classList.remove('js-show');
+            menuToggle.setAttribute('aria-expanded', 'false');
+        });
+    });
+
+			</script>
 		</header>
 		<section b-k59dbireqp="" class="dfe-page-grey">
 			<div b-k59dbireqp="" class="govuk-width-container">
@@ -102,7 +126,7 @@
 						<div class="govuk-grid-row">
 							<section class="dfe-section">
 								<div class="govuk-grid-column-two-thirds">
-									<h3 class="govuk-heading-m" id="Who-is-this-support-for-">Who is this support for?</h3>
+									<h2 class="govuk-heading-l" id="Who-is-this-support-for-">Who is this support for?</h2>
 									<p class="govuk-body">You may have the right to support if you are between 15 and 25 and:</p>
 									<ul>
 										<li>
@@ -154,6 +178,11 @@
 							</div>
 						</section>
 						<p class="govuk-body"></p>
+						<div class="govuk-grid-row">
+							<div class="govuk-grid-column-full">
+								<div class="sharethis-inline-share-buttons"></div>
+							</div>
+						</div>
 						<hr>
 						<div class="govuk-grid-row">
 							<div class="metadata-logo-wrapper">
@@ -168,11 +197,11 @@
 											<dd class="gem-c-metadata__definition">07 February 2025</dd>
 											<dt class="gem-c-metadata__term">Last updated</dt>
 											<dd class="gem-c-metadata__definition">
-												07 February 2025
+												18 February 2025
 											</dd>
 											<dt class="gem-c-metadata__term">Paged Fetched</dt>
 											<dd class="gem-c-metadata__definition">
-												07 February 2025 17:40:43
+												20 February 2025 14:25:37
 											</dd>
 										</dl>
 									</div>
