--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -42,56 +42,6 @@
 				<strong>IntegrationTest</strong>
 				version of Care leavers website.</div>
 		</div>
-		<div class="govuk-cookie-banner" data-nosnippet="" role="region" aria-label="Cookies on Care leavers" id="cookie-container">
-			<div class="govuk-cookie-banner__message govuk-width-container">
-				<div class="govuk-grid-row">
-					<div class="govuk-grid-column-two-thirds">
-						<h2 class="govuk-cookie-banner__heading govuk-heading-m">
-							Cookies on Care leavers
-						</h2>
-						<div class="govuk-cookie-banner__content">
-							<p class="govuk-body">We use some essential cookies to make this service work.</p>
-							<p class="govuk-body">We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
-						</div>
-					</div>
-				</div>
-				<div class="govuk-button-group">
-					<button type="button" class="govuk-button" data-module="govuk-button" data-cookie-string=".AspNet.Consent=yes; expires=Sat, 21 Feb 2026 09:57:50 GMT; path=/; samesite=strict" id="accept-cookie">
-						Accept analytics cookies
-					</button>
-					<button type="button" class="govuk-button" data-module="govuk-button" data-cookie-string=".AspNet.Consent=no; expires=Sat, 21 Feb 2026 09:57:50 GMT; path=/; samesite=strict" id="reject-cookie">
-						Reject analytics cookies
-					</button>
-					<a class="govuk-link" href="/pages/cookie-policy">View cookies</a>
-				</div>
-			</div>
-		</div>
-		<script nonce="mock-nonce">
-        (function () {
-            var acceptCookieButton = document.querySelector("#accept-cookie");
-            acceptCookieButton.addEventListener("click", function (event) {
-                gtag('consent', 'update', {
-                    'analytics_storage': 'granted'
-                });
-                document.cookie = acceptCookieButton.dataset.cookieString;
-                window.clarity('consent');
-				var cookieContainer = document.querySelector("#cookie-container");
-				cookieContainer.remove();
-            }, false);
-            
-            var rejectCookieButton = document.querySelector("#reject-cookie");
-            rejectCookieButton.addEventListener("click", function (event) {
-                gtag('consent', 'update', {
-                    'analytics_storage': 'denied'
-                });
-                document.cookie = rejectCookieButton.dataset.cookieString;
-                window.clarity('consent', false);
-                var cookieContainer = document.querySelector("#cookie-container");
-                cookieContainer.remove();
-            }, false);
-        })();
-    
-		</script>
 		<div class="govuk-width-container">
 			<div class="govuk-phase-banner">
 				<p class="govuk-phase-banner__content">
@@ -161,7 +111,7 @@
 			</script>
 		</header>
 		<section b-k59dbireqp="" class="dfe-page-grey">
-			<div b-k59dbireqp="" class="govuk-width-container">
+			<div b-k59dbireqp="" class="govuk-width-container" id="main-header-container">
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-two-thirds">
 						<h1 class="govuk-heading-xl">
@@ -173,7 +123,7 @@
 				</div>
 			</div>
 		</section>
-		<div b-k59dbireqp="" class="govuk-width-container">
+		<div b-k59dbireqp="" class="govuk-width-container" id="main-content-container">
 			<main b-k59dbireqp="" class="govuk-main-wrapper" id="main-content" role="main">
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-full">
