--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/ComponentTest.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/ComponentTest.html
@@ -117,7 +117,7 @@
 						<nav class="govuk-breadcrumbs" aria-label="Breadcrumb">
 							<ol class="govuk-breadcrumbs__list">
 								<li class="govuk-breadcrumbs__list-item">
-									<a href="/" class="govuk-breadcrumbs__link">Home</a>
+									<a href="home" class="govuk-breadcrumbs__link">Home</a>
 								</li>
 								<li class="govuk-breadcrumbs__list-item">
 									<a href="component-test" class="govuk-breadcrumbs__link">Component Test</a>
