Use correct crown

--- a/resources/tech_docs_template/main.html
+++ b/resources/tech_docs_template/main.html
@@ -35,7 +35,7 @@
         <a 
           href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
           target="_blank" rel="noopener">
-          <img src="{{ 'assets/images/govuk-crest-2x.png' | url }}" width=125px height=102px;>
+          <img src="{{ 'assets/images/govuk-crest.svg' | url }}" width=125px height=102px;>
           <br>
           © Crown copyright
         </a>
