--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -112,6 +112,16 @@
 		</header>
 		<section b-k59dbireqp="" class="dfe-page-grey">
 			<div b-k59dbireqp="" class="govuk-width-container" id="main-header-container">
+				<nav class="govuk-breadcrumbs" aria-label="Breadcrumb">
+					<ol class="govuk-breadcrumbs__list">
+						<li class="govuk-breadcrumbs__list-item">
+							<a href="home" class="govuk-breadcrumbs__link">Home</a>
+						</li>
+						<li class="govuk-breadcrumbs__list-item">
+							<a href="image-test" class="govuk-breadcrumbs__link">Image Test</a>
+						</li>
+					</ol>
+				</nav>
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-two-thirds">
 						<h1 class="govuk-heading-xl">
