--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -115,10 +115,7 @@
 				<nav class="govuk-breadcrumbs" aria-label="Breadcrumb">
 					<ol class="govuk-breadcrumbs__list">
 						<li class="govuk-breadcrumbs__list-item">
-							<a href="home" class="govuk-breadcrumbs__link">Home</a>
-						</li>
-						<li class="govuk-breadcrumbs__list-item">
-							<a href="image-test" class="govuk-breadcrumbs__link">Image Test</a>
+							<a class="govuk-breadcrumbs__link" href="/home">Home</a>
 						</li>
 					</ol>
 				</nav>
