Fixed component testing

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -117,8 +117,8 @@
 						<h1 class="govuk-heading-xl">
 							Get support if you've been in care
 						</h1>
-						<p class="govuk-body">Starting life as an adult can be challenging, but you're not on your own.</p>
-						<p class="govuk-body">If you have been in care or have come to the UK on your own, you can get support.</p>
+						<p class="govuk-body-l">Starting life as an adult can be challenging, but you're not on your own.</p>
+						<p class="govuk-body-l">If you have been in care or have come to the UK on your own, you can get support.</p>
 					</div>
 				</div>
 			</div>
