--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -48,8 +48,7 @@
 					<strong class="govuk-phase-banner__content__tag govuk-tag">Beta</strong>
 					<span class="govuk-phase-banner__text">
 						<span class="govuk-phase-banner__text">
-							This is a new service. Help us improve it and
-							<a class="govuk-link" href="#">give your feedback by email</a>.
+							This is a new service.
 						</span>
 					</span>
 				</p>
