--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -159,7 +159,7 @@
 								<div class="hf-card">
 									<a href="support-money-and-benefits">
 										<div class="hf-card-container">
-											<img src="Contentful.Core.Models.File" alt="" role="presentation" class="full-width-image card-image">
+											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/2OQB2chv6WQnhuQcoPmRl2/eda63f1183152bc36378065f714ee696/money_and_benefits.png">
 											<div class="cat-card-details">
 												<h3 class="govuk-heading-m">Money and benefits</h3>
 												<p class="govuk-body">Help with money when you leave care and benefits you can apply for</p>
@@ -170,7 +170,7 @@
 								<div class="hf-card">
 									<a href="support-housing-and-accommodation">
 										<div class="hf-card-container">
-											<img src="Contentful.Core.Models.File" alt="" role="presentation" class="full-width-image card-image">
+											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/2hY4PJ2XkBrPIAWUVfLZgD/a84d0e5218a255349ddb186ae97a1230/housing_and_benefits.png">
 											<div class="cat-card-details">
 												<h3 class="govuk-heading-m">Housing and accommodation</h3>
 												<p class="govuk-body">Help finding somewhere to live and other support with housing costs</p>
