--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -136,6 +136,8 @@
 					</div>
 					<div class="govuk-grid-column-one-third">
 					</div>
+					<div class="govuk-grid-column-full">
+					</div>
 				</div>
 			</main>
 		</div>
