Re-generated snapshots

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -133,6 +133,26 @@
 					<div class="govuk-grid-column-two-thirds">
 						<img class="full-width-image" src="//images.ctfassets.net/3y72rykjd1o5/71UfwHVCjz9O7RxA0e3jrJ/10a9c71dd9d5aa3ef795b1a571aa33d4/Test.png" alt="Test alt description">
 						<p class="govuk-body"></p>
+						<div class="govuk-grid-row">
+							<div class="metadata-logo-wrapper">
+								<div class="govuk-grid-column-two-thirds metadata-column">
+									<div class="gem-c-metadata" data-module="gem-toggle metadata">
+										<dl class="gem-c-metadata__list">
+											<dt class="gem-c-metadata__term">From:</dt>
+											<dd class="gem-c-metadata__definition notranslate">
+												<a class="govuk-link" href="https://www.gov.uk/government/organisations/department-for-education">Department for Education</a>
+											</dd>
+											<dt class="gem-c-metadata__term">Published</dt>
+											<dd class="gem-c-metadata__definition">30 January 2025</dd>
+											<dt class="gem-c-metadata__term">Last updated</dt>
+											<dd class="gem-c-metadata__definition">
+												30 January 2025
+											</dd>
+										</dl>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="govuk-grid-column-one-third">
 					</div>
