--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleParagraph.html
@@ -130,6 +130,25 @@
 						<p class="govuk-body">Test 2</p>
 						<p class="govuk-body"></p>
 						<p class="govuk-body"></p>
+						<div class="govuk-grid-row">
+							<div class="metadata-logo-wrapper">
+								<div class="govuk-grid-column-two-thirds metadata-column">
+									<div class="gem-c-metadata" data-module="gem-toggle metadata">
+										<dl class="gem-c-metadata__list">
+											<dt class="gem-c-metadata__term">From:</dt>
+											<dd class="gem-c-metadata__definition notranslate">
+												<a class="govuk-link" href="https://www.gov.uk/government/organisations/department-for-education">Department for Education</a>
+											</dd>
+											<dt class="gem-c-metadata__term">Published</dt>
+											<dd class="gem-c-metadata__definition"></dd>
+											<dt class="gem-c-metadata__term">Last updated</dt>
+											<dd class="gem-c-metadata__definition">
+											</dd>
+										</dl>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="govuk-grid-column-one-third">
 					</div>
