Fixed snapshots for integration tests

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -62,18 +62,16 @@
 					</button>
 				</div>
 				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="DfE homepage">
-						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="DfE Homepage">
-						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="DfE Homepage">
+					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="Care leavers homepage">
+						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
+						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
 					</a>
 				</div>
 				<div class="dfe-header__content" id="content-header">
-					<ul class="dfe-header__action-links">
-					</ul>
 				</div>
 			</div>
 			<div class="dfe-width-container dfe-header__service-name">
-				<a href="/" class="dfe-header__link--service">Care leavers</a>
+				Care leavers
 			</div>
 			<nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
 				<div class="dfe-width-container">
@@ -253,9 +251,7 @@
 							<div class="govuk-!-margin-top-3 govuk-!-margin-bottom-5">
 								<div class="govuk-grid-row split-panel" style="background: #f3f2f1; vertical-align: text-top;">
 									<div class="govuk-grid-column-one-half image-column">
-										<a href="guide-leaving-care" class="govuk-link">
-											<div class="image-container" style="background-image: url('//images.ctfassets.net/3y72rykjd1o5/3AJ5VJg0WfmJImY90KOpQU/39af1e2a663401b7607b9fac86c50d1e/image.png');"></div>
-										</a>
+										<div class="image-container" style="background-image: url('//images.ctfassets.net/3y72rykjd1o5/3AJ5VJg0WfmJImY90KOpQU/39af1e2a663401b7607b9fac86c50d1e/image.png');"></div>
 									</div>
 									<div class="govuk-grid-column-one-half text-column">
 										<span class="govuk-caption-l">Guide</span>
