--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -62,18 +62,16 @@
 					</button>
 				</div>
 				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="DfE homepage">
-						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="DfE Homepage">
-						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="DfE Homepage">
+					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="Care leavers homepage">
+						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
+						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
 					</a>
 				</div>
 				<div class="dfe-header__content" id="content-header">
-					<ul class="dfe-header__action-links">
-					</ul>
 				</div>
 			</div>
 			<div class="dfe-width-container dfe-header__service-name">
-				<a href="/" class="dfe-header__link--service">Care leavers</a>
+				Care leavers
 			</div>
 			<nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
 				<div class="dfe-width-container">
