--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -17,10 +17,12 @@
 		</script>
 		
 		<!-- End Clarity -->     
-		<!-- Begin ShareThis -->
-		<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=abcdefghijk&amp;product=inline-share-buttons&amp;source=platform" async="async" nonce="mock-nonce"></script>
+		<!-- BEGIN SHAREAHOLIC CODE -->
+		<link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script">
+		<meta name="shareaholic:site_id" content="abcdefghijk">
+		<script data-cfasync="false" async="" src="https://cdn.shareaholic.net/assets/pub/shareaholic.js" nonce="mock-nonce"></script>
 		
-		<!-- End ShareThis -->
+		<!-- END SHAREAHOLIC CODE -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Find support for care leavers - Care leavers</title>
@@ -62,18 +64,16 @@
 					</button>
 				</div>
 				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="DfE homepage">
-						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="DfE Homepage">
-						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="DfE Homepage">
+					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="Care leavers homepage">
+						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
+						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
 					</a>
 				</div>
 				<div class="dfe-header__content" id="content-header">
-					<ul class="dfe-header__action-links">
-					</ul>
 				</div>
 			</div>
 			<div class="dfe-width-container dfe-header__service-name">
-				<a href="/" class="dfe-header__link--service">Care leavers</a>
+				Care leavers
 			</div>
 			<nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
 				<div class="dfe-width-container">
@@ -130,7 +130,7 @@
 								<div class="govuk-grid-column-two-thirds">
 									<h2 class="govuk-heading-l" id="Who-is-this-support-for-">Who is this support for?</h2>
 									<p class="govuk-body">You might have the right to leaving care support if you:</p>
-									<ul>
+									<ul class="govuk-list govuk-list--bullet">
 										<li>are aged 15 to 24</li>
 										<li>have spent time in care in England</li>
 										<li>
@@ -138,7 +138,7 @@
 										</li>
 									</ul>
 									<p class="govuk-body">This includes:</p>
-									<ul>
+									<ul class="govuk-list govuk-list--bullet">
 										<li>foster care</li>
 										<li>residential care (like a children’s home)</li>
 										<li>time in custody (like a young offender institution or secure children’s home)</li>
@@ -253,9 +253,7 @@
 							<div class="govuk-!-margin-top-3 govuk-!-margin-bottom-5">
 								<div class="govuk-grid-row split-panel" style="background: #f3f2f1; vertical-align: text-top;">
 									<div class="govuk-grid-column-one-half image-column">
-										<a href="guide-leaving-care" class="govuk-link">
-											<div class="image-container" style="background-image: url('//images.ctfassets.net/3y72rykjd1o5/3AJ5VJg0WfmJImY90KOpQU/39af1e2a663401b7607b9fac86c50d1e/image.png');"></div>
-										</a>
+										<div class="image-container" style="background-image: url('//images.ctfassets.net/3y72rykjd1o5/3AJ5VJg0WfmJImY90KOpQU/39af1e2a663401b7607b9fac86c50d1e/image.png');"></div>
 									</div>
 									<div class="govuk-grid-column-one-half text-column">
 										<span class="govuk-caption-l">Guide</span>
