--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -17,10 +17,12 @@
 		</script>
 		
 		<!-- End Clarity -->     
-		<!-- Begin ShareThis -->
-		<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=abcdefghijk&amp;product=inline-share-buttons&amp;source=platform" async="async" nonce="mock-nonce"></script>
+		<!-- BEGIN SHAREAHOLIC CODE -->
+		<link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script">
+		<meta name="shareaholic:site_id" content="abcdefghijk">
+		<script data-cfasync="false" async="" src="https://cdn.shareaholic.net/assets/pub/shareaholic.js" nonce="mock-nonce"></script>
 		
-		<!-- End ShareThis -->
+		<!-- END SHAREAHOLIC CODE -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Work and employment support - Care leavers</title>
@@ -62,18 +64,16 @@
 					</button>
 				</div>
 				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="DfE homepage">
-						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="DfE Homepage">
-						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="DfE Homepage">
+					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="Care leavers homepage">
+						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
+						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
 					</a>
 				</div>
 				<div class="dfe-header__content" id="content-header">
-					<ul class="dfe-header__action-links">
-					</ul>
 				</div>
 			</div>
 			<div class="dfe-width-container dfe-header__service-name">
-				<a href="/" class="dfe-header__link--service">Care leavers</a>
+				Care leavers
 			</div>
 			<nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
 				<div class="dfe-width-container">
@@ -162,7 +162,7 @@
 						<h3 class="govuk-heading-m" id="Local-support">Local support</h3>
 						<p class="govuk-body">You might get support from your local council’s Local Offer for care leavers</p>
 						<p class="govuk-body">For example, this could include things like:</p>
-						<ul>
+						<ul class="govuk-list govuk-list--bullet">
 							<li>help with travel costs (like a bus pass) or essential clothes for work or interviews</li>
 							<li>careers advice and guidance, such as help with job searches or writing your CV</li>
 							<li>work experience or an apprenticeship at your council</li>
@@ -237,7 +237,7 @@
 						<div class="govuk-grid-row">
 							<div class="govuk-grid-column-full">
 								<h3 class="govuk-heading-m">Share this page</h3>
-								<div class="sharethis-inline-share-buttons"></div>
+								<div class="shareaholic-canvas" data-app="share_buttons" data-app-id="12345678"></div>
 							</div>
 						</div>
 					</div>
