Fix canonical links

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -36,9 +36,9 @@
 		<meta property="og:site_name" content="Care leavers">
 		<meta property="og:title" content="Find support for care leavers">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://localhost/en/home?language=en">
+		<meta property="og:url" content="https://localhost/en/home">
 		<meta property="og:locale" content="en_GB">
-		<link rel="canonical" href="https://localhost/en/home?language=en">
+		<link rel="canonical" href="https://localhost/en/home">
 	</head>
 	<body class="govuk-template__body">
 		<script nonce="mock-nonce">
