--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -129,9 +129,9 @@
 											<dd class="gem-c-metadata__definition notranslate">
 												<a class="govuk-link" href="https://www.gov.uk/government/organisations/department-for-education">Department for Education</a>
 											</dd>
-											<dt class="gem-c-metadata__term">Published</dt>
+											<dt class="gem-c-metadata__term">Published:</dt>
 											<dd class="gem-c-metadata__definition">30 January 2025</dd>
-											<dt class="gem-c-metadata__term">Last updated</dt>
+											<dt class="gem-c-metadata__term">Last updated:</dt>
 											<dd class="gem-c-metadata__definition">
 												30 January 2025
 											</dd>
