--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -207,11 +207,11 @@
 											<dd class="gem-c-metadata__definition notranslate">
 												<a class="govuk-link" href="https://www.gov.uk/government/organisations/department-for-education">Department for Education</a>
 											</dd>
-											<dt class="gem-c-metadata__term">Published</dt>
-											<dd class="gem-c-metadata__definition">05 March 2025</dd>
-											<dt class="gem-c-metadata__term">Last updated</dt>
+											<dt class="gem-c-metadata__term">Published:</dt>
+											<dd class="gem-c-metadata__definition">5 March 2025</dd>
+											<dt class="gem-c-metadata__term">Last updated:</dt>
 											<dd class="gem-c-metadata__definition">
-												05 March 2025
+												5 March 2025
 											</dd>
 										</dl>
 									</div>
