--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -124,7 +124,7 @@
 									<li>are aged 15 to 24</li>
 									<li>have spent time in care in England</li>
 									<li>
-										<a class="govuk-link" href="/care-terms-explained#definition-Test-Definition">test definition</a>
+										<a class="govuk-link" href="care-terms-explained#definition-Test-Definition">test definition</a>
 									</li>
 								</ul>
 								<p class="govuk-body">This includes:</p>
