added line break

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -123,6 +123,7 @@
 						<div class="govuk-grid-row">
 							<div class="metadata-logo-wrapper">
 								<div class="govuk-grid-column-two-thirds metadata-column">
+									<hr class="govuk-section-break govuk-section-break--visible">
 									<div class="gem-c-metadata" data-module="gem-toggle metadata">
 										<dl class="gem-c-metadata__list">
 											<dt class="gem-c-metadata__term">From:</dt>
