--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -120,6 +120,8 @@
 					<div class="govuk-grid-column-two-thirds">
 						<img class="full-width-image" src="//images.ctfassets.net/3y72rykjd1o5/71UfwHVCjz9O7RxA0e3jrJ/10a9c71dd9d5aa3ef795b1a571aa33d4/Test.png" alt="Test alt description">
 						<p class="govuk-body"></p>
+					</div>
+					<div class="govuk-grid-column-full">
 						<div class="govuk-grid-row">
 							<div class="metadata-logo-wrapper">
 								<div class="govuk-grid-column-two-thirds metadata-column">
