--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -198,6 +198,8 @@
 							<a class="govuk-link" href="https://www.gov.uk/work-health-programme">Work and health programme (Opens in a new tab)</a>
 						</h4>
 						<p class="govuk-body">Help finding and keeping a job if you’re out of work.</p>
+					</div>
+					<div class="govuk-grid-column-full">
 						<div class="govuk-grid-row">
 							<div class="metadata-logo-wrapper">
 								<div class="govuk-grid-column-two-thirds metadata-column">
