tests passing on local

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -41,6 +41,7 @@
 		<meta property="twitter:url" content="https://localhost/en/home">
 		<meta property="og:locale" content="en_GB">
 		<meta property="og:description" content="Leaving care can be a challenging time. Whether you’re still in care or have already left, help is available.">
+		<meta property="twitter:description" content="Leaving care can be a challenging time. Whether you’re still in care or have already left, help is available.">
 		<meta name="description" content="Leaving care can be a challenging time. Whether you’re still in care or have already left, help is available.">
 		<link rel="canonical" href="https://localhost/en/home">
 	</head>
