Fix/last updated format (#121)
* date format changed on last updated component

* tests passing

* added line break

* line break on lest updated lengthened and mobile nav styling tweaked

* tests passing

* tests passing on local

---------

Co-authored-by: EmilyEkins <emilyekins@ES-Ekinss-MacBook-Pro.local>

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -200,20 +200,23 @@
 							<a class="govuk-link" href="https://www.gov.uk/work-health-programme">Work and health programme (Opens in a new tab)</a>
 						</h4>
 						<p class="govuk-body">Help finding and keeping a job if you’re out of work.</p>
+					</div>
+					<div class="govuk-grid-column-full">
 						<div class="govuk-grid-row">
 							<div class="metadata-logo-wrapper">
 								<div class="govuk-grid-column-two-thirds metadata-column">
+									<hr class="govuk-section-break govuk-section-break--visible">
 									<div class="gem-c-metadata" data-module="gem-toggle metadata">
 										<dl class="gem-c-metadata__list">
 											<dt class="gem-c-metadata__term">From:</dt>
 											<dd class="gem-c-metadata__definition notranslate">
 												<a class="govuk-link" href="https://www.gov.uk/government/organisations/department-for-education">Department for Education</a>
 											</dd>
-											<dt class="gem-c-metadata__term">Published</dt>
-											<dd class="gem-c-metadata__definition">05 March 2025</dd>
-											<dt class="gem-c-metadata__term">Last updated</dt>
+											<dt class="gem-c-metadata__term">Published:</dt>
+											<dd class="gem-c-metadata__definition">5 March 2025</dd>
+											<dt class="gem-c-metadata__term">Last updated:</dt>
 											<dd class="gem-c-metadata__definition">
-												05 March 2025
+												5 March 2025
 											</dd>
 										</dl>
 									</div>
